--- a/app/views/tasks/new.erb
+++ b/app/views/tasks/new.erb
@@ -1,8 +1,5 @@
 <h2>Add a task</h2>
 
-<% if flash[:notice] %>
-  <div class="errors"><%= flash[:notice] %></div>
-<% end %>
 
 <%= form_for @task do |f| %>
   <% if flash[:notice] %>
@@ -10,7 +7,9 @@
   <% else %>
     <%= f.label :task, "Description" %><br>
   <% end %>
-  <%= f.text_field :task %><br><br>
+  <%= f.text_field :task %><div class="errors"><%= flash[:notice] if flash[:notice]%></div>
+
+  <br><br>
 
   <%= f.label :date, "Due Date" %><br>
   <%= f.date_select :date %><br><br>
