added calendar date picker for tasks and disabled submit button if text fields are empty

--- a/app/views/task_lists/new.html.erb
+++ b/app/views/task_lists/new.html.erb
@@ -8,9 +8,12 @@
   </div>
 <% end %>
 
-<%= form_for @task do |f| %>
-  <%= f.label :name %>
-  <%= f.text_field :name %><div class="errors"><%= @task.errors.messages[:name].first if @task.errors.messages[:name].present? %></div>
-  <br><br>
-  <%= f.submit %>
-<% end %>
+<div class="create-form">
+  <%= form_for @task do |f| %>
+    <%= f.label :name %>
+    <%= f.text_field :name %>
+    <div class="errors"><%= @task.errors.messages[:name].first if @task.errors.messages[:name].present? %></div>
+    <br><br>
+    <%= f.submit class: 'blue_button' %>
+  <% end %>
+</div>
