--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,8 @@
 /*
  *= require_tree .
  *= require_self
+ *= require pickadate/classic
+*= require pickadate/classic.date
  */
 
 .container {
@@ -8,6 +10,7 @@
   margin: 0 auto;
   padding: 1em;
   box-sizing: border-box;
+  height: 100%;
 
   &:after {
     visibility: hidden;
@@ -139,3 +142,8 @@ main {
 .arrow {
   font-size: 1.5em;
 }
+
+.flash button {
+  float: right;
+}
+
